<resources>
    <string name="app_name">INVOICE</string>

    // Launch
    <string name="launch_prompt_name">Your business name</string>
    <string name="launch_prompt_address">Business address</string>
    <string name="launch_prompt_email">Email</string>
    <string name="launch_prompt_phone">Phone number</string>
    <string name="launch_prompt_currency">Select your currency</string>
    <string name="launch_continue">Continue</string>

    // Home Screen
    <string name="home_add_invoice">New Invoice</string>
    <string name="home_menu_edit_business">Edit My Business</string>

    // Business Screen
    <string name="business_title">Edit Business Details</string>
    <string name="business_save">Save</string>
    <string name="business_delete">Delete</string>

    // Invoice Screen
    <string name="invoice_title">Create Your Invoice</string>
    <string name="invoice_add_item">Add Item</string>
    <string name="invoice_add_charge">Add Charge</string>
    <string name="invoice_delete">Delete Invoice</string>
    <string name="invoice_toggle_paid">Toggle Paid</string>
    <string name="invoice_pdf">Generate PDF</string>

    // Item Screen
    <string name="item_title">Edit Item Details</string>
    <string name="item_name">Description</string>
    <string name="item_price">Price</string>
    <string name="item_discount">Discount</string>

    // Charge Screen
    <string name="charge_title">Edit Charge</string>
    <string name="charge_name">Description</string>
    <string name="charge_value">Value</string>

    // Billing Screen
    <string name="billing_title">Edit Billing Detail</string>
    <string name="billing_date">Invoice Date</string>
    <string name="billing_due_date">Due Date</string>
    <string name="billing_number">Invoice Number</string>

    // Preview Screen
    <string name="preview_title">Preview</string>
    <string name="preview_save">Save</string>
    <string name="preview_send">Send Invoice</string>

    // Dialog
    <string name="dialog_initial_title">Please input your initial balance!</string>
    <string name="dialog_initial_subtitle">This amount will be your basic balance before everything is applied</string>
    <string name="dialog_initial_prompt">Input Balance Here</string>
    <string name="dialog_expenses">Add Expense</string>
    <string name="dialog_income">Add Income</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_description">Description</string>
    <string name="dialog_amount">Amount</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
