<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".feature.launch.LaunchActivity"
                                             android:background="@color/colorPrimary">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/gtwalsheimregular"
            android:textSize="64sp"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appTitle"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLayout"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/launch_prompt_name"
                android:fontFamily="@font/gtwalsheimmedium"
                android:inputType="text"
                android:id="@+id/nameEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressLayout"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:visibility="gone"
            android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/launch_prompt_address"
                android:fontFamily="@font/gtwalsheimmedium"
                android:inputType="textMultiLine"
                android:id="@+id/addressEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailLayout"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:visibility="gone"
            android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/launch_prompt_email"
                android:fontFamily="@font/gtwalsheimmedium"
                android:inputType="textEmailAddress"
                android:id="@+id/emailEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneLayout"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:visibility="gone"
            android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/launch_prompt_phone"
                android:fontFamily="@font/gtwalsheimmedium"
                android:inputType="phone"
                android:id="@+id/phoneEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/launch_prompt_currency"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/gtwalsheimmedium"
            android:textSize="18sp"
            android:background="@drawable/bg_white_rounded_rectangle"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableEnd="@drawable/ic_drop_down_arrow"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/currencyButton"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_continue"
            android:padding="8dp"
            android:enabled="false"
            android:id="@+id/continueButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:elevation="3dp"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.8"
            android:id="@+id/popupLayout">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currencyRecyclerView"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>