<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.charge.ChargeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/colorPrimary"
            android:id="@+id/menuBar">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_title"
                android:textColor="@color/white"
                android:fontFamily="@font/gtwalsheimmedium"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/backButton"
                android:layout_marginStart="16dp"/>

        <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_back"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/backButton"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/business_save"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/gtwalsheimregular"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                android:id="@+id/saveButton"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/business_delete"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                android:fontFamily="@font/gtwalsheimregular"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                android:id="@+id/deleteButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/menuBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_white_rounded_rectangle"
                    android:layout_marginBottom="32dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/charge_name"
                        android:fontFamily="@font/gtwalsheimmedium"
                        android:inputType="text"
                        android:id="@+id/nameEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/valueLayout"
                    app:layout_constraintTop_toBottomOf="@id/nameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_white_rounded_rectangle"
                    android:layout_marginBottom="32dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/charge_value"
                        android:fontFamily="@font/gtwalsheimmedium"
                        android:inputType="numberDecimal"
                        android:id="@+id/valueEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>